--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "~6.23.1",
+    "babel-loader": "~6.3.2",
+    "babel-plugin-transform-es2015-spread": "~6.22.0",
+    "babel-plugin-transform-object-rest-spread": "~6.23.0",
+    "babel-preset-env": "~1.2.0",
     "colors.css": "~3.0.0",
     "css-loader": "~0.26.2",
     "node-sass": "~4.5.0",
