--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "colors.css": "~3.0.0",
     "css-loader": "~0.26.2",
     "node-sass": "~4.5.0",
-    "normalize.css": "~5.0.0",
+    "normalize.css": "^5.0.0",
     "redux": "^3.6.0",
     "riot": "^3.3.1",
     "riot-tag-loader": "^1.0.0",
