Adjusted the timing of game over replay button for tests sake. Added a resolver step to drops so that they end the game promptly

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -42,5 +39,9 @@
       "^.+\\.tag$": "riot-jest-transformer"
     },
     "timers": "fake"
+  },
+  "scripts": {
+    "test": "jest",
+    "dev": "webpack -w"
   }
 }
