--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "riot": "^3.3.1",
     "riot-tag-loader": "^1.0.0",
     "style-loader": "~0.13.2",
-    "webpack": "^2.2.1"
+    "webpack": "2.2.1"
   },
   "devDependencies": {
     "babel-jest": "~19.0.0",
@@ -42,6 +42,7 @@
   },
   "scripts": {
     "test": "jest",
+    "build": "webpack",
     "dev": "webpack -w"
   }
 }
