--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watch",
     "build": "webpack",
     "dev": "webpack -w"
   }
