--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "babel": {
     "presets": [
       "es2015"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
   },
   "jest": {
