--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "~4.5.0",
     "normalize.css": "^5.0.0",
     "redux": "^3.6.0",
+    "reselect": "~3.0.0",
     "riot": "^3.3.1",
     "riot-tag-loader": "^1.0.0",
     "style-loader": "~0.13.2",
