--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "babel-preset-env": "~1.2.0",
     "colors.css": "~3.0.0",
     "css-loader": "~0.26.2",
+    "file-loader": "~0.10.1",
     "node-sass": "~4.5.0",
     "normalize.css": "^5.0.0",
     "redux": "^3.6.0",
     "reselect": "~3.0.0",
     "riot": "^3.3.1",
     "riot-tag-loader": "^1.0.0",
+    "string-replace-loader": "~1.0.5",
     "style-loader": "~0.13.2",
     "webpack": "2.2.1"
   },
