--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "file-loader": "~0.10.1",
     "node-sass": "~4.5.0",
     "normalize.css": "^5.0.0",
+    "react": "~15.5.4",
+    "react-dom": "~15.5.4",
     "redux": "^3.6.0",
     "reselect": "~3.0.0",
     "riot": "^3.3.1",
@@ -28,16 +30,11 @@
   "devDependencies": {
     "babel-jest": "~19.0.0",
     "babel-preset-es2015": "~6.24.0",
+    "babel-preset-react": "~6.24.1",
     "jest": "~19.0.2",
+    "jsx-loader": "~0.13.2",
+    "react-redux": "~5.0.4",
     "riot-jest-transformer": "~1.0.10"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "transform-object-rest-spread"
-    ]
   },
   "jest": {
     "transform": {
